Update big-cat.html photo not avail, add new

--- a/_includes/big-cat.html
+++ b/_includes/big-cat.html
@@ -5,5 +5,5 @@
 {% endcomment %}
 
 <img style="display:block; margin: 10px auto;" 
-    src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Siberischer_tiger_de_edit02.jpg/640px-Siberischer_tiger_de_edit02.jpg" 
+    src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Tiger_Face_%2810971343685%29.jpg/500px-Tiger_Face_%2810971343685%29.jpg" 
     alt="face of a big tiger" >
