Update default.html font awesome

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,12 @@
+<head>
+  <meta charset="utf-8">
+  <title>{{ site.data.theme.name }} - {{ page.title }}</title>
+  <meta name="author" content="{{ site.data.theme.name }}" />
+  <meta name="description" content="Sample blog of John Smith: Tech, startups, design - connected. " />
 
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+  {% include analytics.html %}
+  {% include mixpanel.html %}
+
+</head>
