--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,7 @@
   <meta charset="utf-8">
   <title>{{ site.data.theme.name }} - {{ page.title }}</title>
   <meta name="author" content="{{ site.data.theme.name }}" />
-  <meta name="description" content="Sample blog of John Smith: Tech, startups, design - connected. " />
+  <meta name="description" content="An LXD portfolio site" />
 
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-  {% include analytics.html %}
-  {% include mixpanel.html %}
 
 </head>
